<resources>
    <string name="app_name">zClip</string>

    <!-- home fragment -->
    <string name="network_not_detected">network not detected</string>
    <string name="your_lan_ip">your lan ip</string>
    <string name="disconnected">disconnected</string>
    <string name="connected">connected</string>
    <string name="waiting_for_connection">waiting for connection</string>
    <string name="synchronize">synchronize</string>
    <string name="stop_sync">stop sync</string>
    <string name="cancel_sync">cancel sync</string>
    <string name="manual">manual</string>
    <string name="auto">auto</string>
    <string name="not_mode_selected">not mode selected</string>
    <string name="mode">mode</string>
    <string name="hint_target_ip">target ip</string>
    <string name="send">send</string>
    <string name="invalid_ip">Invalid Ip</string>

    <!-- Notifications -->
    <string name="deny">deny</string>
    <string name="accept">accept</string>
    <string name="click_to_send_the_clipboard_content">click to send the clipboard content</string>
    <string name="there_is_a_new_request">There is a new request</string>
    <string name="allow_new_connection">allow connection</string>
</resources>