<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ip section -->
    <TextView
        android:id="@+id/tv_lan_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/network_not_detected"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lan_ip_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:text="@string/your_lan_ip"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_lan_ip" />

    <!-- app state -->
    <ImageView
        android:id="@+id/iv_app_state"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_wifi_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lan_ip_label"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_app_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:text="@string/disconnected"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/iv_app_state" />

    <!-- input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeWidth="3dp"
        app:boxStrokeColor="@color/input_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_state">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/jetbrains_mono_regular"
            android:hint="@string/hint_target_ip"
            android:gravity="center"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_synchronize"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:text="@string/synchronize"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_input" />

    <!-- mode -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/jetbrains_mono_bold"
        android:text="@string/manual"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tv_mode"
        app:layout_constraintTop_toBottomOf="@id/btn_synchronize" />

    <TextView
        android:text="@string/mode"
        app:layout_constraintTop_toBottomOf="@id/tv_mode"
        android:textAlignment="center"
        android:fontFamily="@font/jetbrains_mono_regular"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>